--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lux</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -14,19 +14,316 @@
     <header class="header">
       <div class="container">
         <div class="header__top">
-          <a href="index.html" class="logo">
-            <img src="images/logo 2.svg" alt="logo" class="logo__img">
-          </a>
-          <a href="tel: +380505556677" class="phone">+38 (050) 555 66 77</a>
+          <a  class="logo" href="index.html"> <img class="logo__img" src="images/logo 2.svg" alt="logo" > </a>
+          <a class="phone" href="tel: +380505556677" >+38 (050) 555 66 77</a>
         </div>
         <div class="header__content">
-
+          <h1 class="header__title">авто из сша “под ключ”</h1>
+          <h2 class="header__subtitle">ЗАКАЖИ СЕБЕ АВТО ИЗ США С ВЫГОДОЙ ДО 40%</h2>
+          <p class="header__description">Подбор, покупка, доставка, растаможка, ремонт, оформление по договору</p>
+          <a class="button" href="#">КОНСУЛЬТАЦИЯ ЭКСПЕРТА</a>
         </div>
+        <ul class=" social header__social">
+          <li>
+            <a class="header__social-link" href="#">
+              <img class="header__social-img" src="images/Icon/instagram.svg" alt="instagram">
+            </a>
+            <a class="header__social-link" href="#">
+              <img class="header__social-img" src="images/Icon/telegram.svg" alt="telegram">
+            </a>
+            <a class="header__social-link" href="#">
+              <img class="header__social-img" src="images/Icon/whatsapp.svg" alt="whatsapp">
+            </a>
+            <a class="header__social-link" href="#">
+              <img class="header__social-img" src="images/Icon/facebook.svg" alt="facebook">
+            </a>
+          </li>
+        </ul>
+        <img src="images/ford-mustang.png" alt="ford-mustang" class="header__images">
       </div>
     </header>
+    <section class="services">
+      <div class="container">
+        <h2 class="title">НАШИ УСЛУГИ</h2>
+        <div class="services__inner">
+          <div class="services__content">
+            <div class="services__content-box">
+              <h3 class="content__title">Почему ввоз авто из США?</h3>
+              <p class="content__text">
+                Мы сравнили рынки США с Европейскими и поняли, что покупка автомобиля в Америке выгоднее в несколько раз, как бы парадоксально это не звучало. Это вызвано продуманной логистикой, уровнем развития сервисов по оцениванию состояния авто и самим процессом покупки автомобиля.
+              </p>
+              <p class="content__text">
+                Большинство граждан США берут автомобиль в лизинг на несколько лет и все время эксплуатации сама лизинговая компания занимается постоянным ТО автомобиля, вследствие чего, машины из США – один из лучших выборов для автолюбителей Украины.
+              </p>
+            </div>
+            <div class="services__content-box">
+            <h3 class="content__title">Из-за чего такая низкая цена?
+            </h3>
+            <p class="content__text">
+              Битые автомобили из США выкупаются с аукционов страховых компаний. На этих аукционах машина теряет половину цены даже из-за минимальных повреждений. Если учитывать денежные затраты, а именно выкуп, доставку, таможню и ремонт, то цена аналогичного по состоянию автомобиля в Украине будет выше на 35-50%, а новые будут стоить космических денег.
+            </p>
+            </div>
+            <a href="#" class="button button--decor">КОНСУЛЬТАЦИЯ ЭКСПЕРТА</a>
+          </div>
 
-
+          <ol class="services__list">
+            <li class="services__item">
+              <h4 class="services__item-title">Покупка авто</h4>
+              <p class="services__item-text">Подбор автомобиля и экспертная проверка</p>
+            </li>
+            <li class="services__item">
+              <h4 class="services__item-title">Доставка морем</h4>
+              <p class="services__item-text">Расчет оптимальной стоимости доставки авто</p>
+            </li>
+            <li class="services__item">
+              <h4 class="services__item-title">Растаможка авто</h4>
+              <p class="services__item-text">Прохождение таможенного оформления (2-3 дня)</p>
+            </li>
+            <li class="services__item">
+              <h4 class="services__item-title">Ремонт авто</h4>
+              <p class="services__item-text">Комплексный ремонт автомобиля на  СТО</p>
+            </li>
+            <li class="services__item">
+              <h4 class="services__item-title">Сертификация</h4>
+              <p class="services__item-text">Услуга предоставляется по желанию</p>
+            </li>
+            <li class="services__item">
+              <h4 class="services__item-title">Постановка на учет</h4>
+              <p class="services__item-text">Оформление автомобиля в Украине</p>
+            </li>
+          </ol>
+        </div>
+      </div>
+    </section>
+    <section class="benefits">
+      <div class="container">
+        <div class="benefits__inner">
+          <img class="benefits__img" src="images/benefits_car_img.png" alt="car">
+          <div class="benefits__content">
+            <h2 class="title benefits__title">ПОЧЕМУ МЫ?</h2>
+              <ul class="benefits__list">
+                <li class="benefits__item">
+                  <h3 class="benefits__item-title">650</h3>
+                  <h4 class="benefits__item-subtitle">успешно доставленных авто</h4>
+                  <p class="benefits__item-text">большой опыт пригона автомобилей из США под ключ, все клиенты остались довольны на 100%</p>
+                </li>
+                <li class="benefits__item">
+                  <h3 class="benefits__item-title">5</h3>
+                  <h4 class="benefits__item-subtitle">лет на рынке Украины</h4>
+                  <p class="benefits__item-text">Работаем по всей территории Украины, работаем по договору с клиентами</p>
+                </li>
+                <li class="benefits__item">
+                  <h3 class="benefits__item-title">100 %</h3>
+                  <h4 class="benefits__item-subtitle">доверия клиентов</h4>
+                  <p class="benefits__item-text">Онлайн отчетность. Вы всегда в курсе статуса подбора вашего авто. Фото и видео отчет</p>
+                </li>
+              </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     
+    <section class="carousel">
+      <div class="container">
+        <h2 class="title carousel__title">ПРИГНАННЫЕ НАМИ АВТО</h2>
+        <div class="carousel__inner">
+
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-1.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">INFINITI QX50 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 4500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-2.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">TESLA MODEL 3 2018 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-3.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">LEXUS ES 200 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-1.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">INFINITI QX50 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 4500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-2.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">TESLA MODEL 3 2018 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-3.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">LEXUS ES 200 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-1.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">INFINITI QX50 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 4500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-2.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">TESLA MODEL 3 2018 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-3.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">LEXUS ES 200 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-1.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">INFINITI QX50 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 4500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-2.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">TESLA MODEL 3 2018 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-3.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">LEXUS ES 200 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-1.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">INFINITI QX50 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 4500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-2.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">TESLA MODEL 3 2018 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-3.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">LEXUS ES 200 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-1.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">INFINITI QX50 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 4500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-2.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">TESLA MODEL 3 2018 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__item-box">
+              <img class="carousel__item-img" src="images/carousel/slider_car-3.jpg" alt="car-1" >
+              <h3 class="carousel__item-title">LEXUS ES 200 2016 г.</h3>
+              <p class="carousel__item-text">Экономия 5500 $</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contacts">
+      <div class="container">
+        <div class="contacts__inner">
+          <div class="contacts__info">
+            <h2 class="title title__contacts">КОНТАКТЫ</h2>
+            <ul class="contacts__list">
+              <li class="contacts__item">
+                <h3 class="contacts__item-title">Адрес</h3>
+                <p class="contacts__item-text">
+                  Киев, Подол
+                </p>
+                <p class="contacts__item-text">
+                  ул. Константиновская, д.71
+                </p>
+              </li>
+              <li class="contacts__item">
+                <h3 class="contacts__item-title">Время работы</h3>
+                <p class="contacts__item-text">
+                  Пн-Сб: с 9:00 до 19:00,
+                </p>
+                <p class="contacts__item-text">
+                  Вс: выходной
+                </p>
+              </li>
+              <li class="contacts__item">
+                <h3 class="contacts__item-title">Телефон</h3>
+                <a class="contacts__item-text" href="tel: +38 (050) 555 66 77">
+                  +38 (050) 555 66 77
+                </a>
+              </li>
+            </ul>
+          </div>
+          <form action="" class="contacts__form">
+            <h2 class="title form__title">Оставить заявку</h2>
+            <input type="text" class="form__input"placeholder="Как Вас зовут?">
+            <input type="tel" class="form__input" placeholder="Ваш номер телефона">
+            <button class="form__button" type="submit">Отправить заявку</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <a  class="logo" href="index.html"> <img class="logo__img" src="images/logo 2.svg" alt="logo" > </a>
+          <ul class="social">
+            <li>
+              <a class="header__social-link" href="#">
+                <img class="header__social-img" src="images/Icon/instagram.svg" alt="instagram">
+              </a>
+              <a class="header__social-link" href="#">
+                <img class="header__social-img" src="images/Icon/telegram.svg" alt="telegram">
+              </a>
+              <a class="header__social-link" href="#">
+                <img class="header__social-img" src="images/Icon/whatsapp.svg" alt="whatsapp">
+              </a>
+              <a class="header__social-link" href="#">
+                <img class="header__social-img" src="images/Icon/facebook.svg" alt="facebook">
+              </a>
+            </li>
+          </ul>
+          <a href="#" class="footer__copy">Политика конфиденциальности</a>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
